@@ -5,3 +5,8 @@ mvn javafx:run <--- runs the currently configured Application
 
 There are current 4 different applications which will be merged in the future
 To configure the run of an application, uncomment it in the pom and comment out the current target
+
+
+Useful IntelliJ/OSX JVM argument configurations
+
+--module-path $HOME$/.m2/repository/org/openjfx/javafx-base/19/javafx-base-19-mac.jar:$HOME$/.m2/repository/org/openjfx/javafx-graphics/19/javafx-graphics-19-mac.jar:$HOME$.m2/repository/org/openjfx/javafx-controls/19/javafx-controls-19-mac.jar --add-modules javafx.controls
